# joint-decode

./: README.md  pyproject.toml
examples/: prompts.jsonl
src/joint_decode/: config.py  coordinator.py  decision.py  ipc.py  runtime_state.py  selection.py  worker_loop.py
src/joint_decode/gpu/: cli.py  config.py  decoder.py  logits_processor.py  worker.py
src/joint_decode/tpu/: config.py  decision_client.py  decoder.py  worker.py
src/joint_decode_gpu/: __init__.py  aggregation.py  cli.py  config.py  coordinator.py  logits_processor.py  runtime_state.py  worker.py
tests/: test_coordinator.py  test_decision.py  test_decision_client.py  test_joint_decode_end_to_end_gpu.py  test_joint_decode_logits_processor_gpu.py  test_runtime_state.py  test_selection.py  test_tpu_decoder.py  test_worker.py  test_worker_loop.py
tests/gpu/: conftest.py  test_joint_decode_end_to_end_gpu.py  test_joint_decode_logits_processor_gpu.py
