[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joint-decode-gpu"
version = "0.1.0"
description = "Standalone GPU joint decoding with vLLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "vllm",
  "fsspec",
]

[tool.uv.sources]
vllm = { git = "https://github.com/marin-community/vllm.git", rev = "327a10590a2e72ea6de7a00e52a085856158b828" }

[dependency-groups]
test = [
  "pytest",
]
dev = [
  { include-group = "test" },
]

[project.scripts]
joint-decode-gpu = "joint_decode_gpu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "gpu: requires a CUDA GPU and a local vLLM-compatible model",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
