[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joint-decode"
version = "0.1.0"
description = "Joint decoding for two vLLM models, with GPU and TPU backends"
readme = "README.md"
requires-python = ">=3.11"
# Engines (vllm on GPU, vllm + tpu-inference on TPU) are peer dependencies
# provided by the environment; backend modules import them lazily.
dependencies = [
  "fsspec",
]

[dependency-groups]
test = [
  "pytest",
]
dev = [
  { include-group = "test" },
]

[project.scripts]
joint-decode-gpu = "joint_decode.gpu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "gpu: requires a CUDA GPU and a local vLLM-compatible model",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
